Add comprehensive SERVER_SETUP.md and clarify TURN server is REQUIRED

--- a/.env.example
+++ b/.env.example
@@ -68,12 +68,14 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 # ============================================================================
-# TURN Server Configuration (for remote livestreaming)
+# TURN Server Configuration (REQUIRED for livestreaming)
 # ============================================================================
-# Only needed if accessing cameras remotely via WebRTC
-TURN_SERVER_URL=
-TURN_SERVER_USERNAME=
-TURN_SERVER_PASSWORD=
+# CRITICAL: TURN server is REQUIRED for WebRTC livestreaming
+# Without TURN, livestreaming only works on local network
+# Format: turns:domain:5349 or turn:domain:3478
+TURN_SERVER_URL=turns:camera.example.com:5349
+TURN_SERVER_USERNAME=turnuser
+TURN_SERVER_PASSWORD=change_me_strong_password
 
 # ============================================================================
 # Logging Configuration
