--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,10 @@ EMQX_BROKER_PORT=8883
 # Server Configuration
 # ============================================================================
 # Config server (provides certificates to cameras)
+# IMPORTANT: Use your server's local IP (not 0.0.0.0) for security
+# Example: CONFIG_SERVER_HOST=192.168.1.100
 CONFIG_SERVER_HOST=0.0.0.0
-CONFIG_SERVER_PORT=80
+CONFIG_SERVER_PORT=8443
 
 # Dashboard web server
 DASHBOARD_SERVER_HOST=0.0.0.0
