--- a/.env.example
+++ b/.env.example
@@ -27,8 +27,9 @@ DASHBOARD_URL=http://localhost:5000
 # MQTT Configuration
 # ============================================================================
 # Local MQTT broker connection (for processor and dashboard)
+# NOTE: Use port 1883 (non-TLS) for local connections, 8883 only if MQTT_USE_TLS=true
 MQTT_BROKER_HOST=127.0.0.1
-MQTT_BROKER_PORT=8883
+MQTT_BROKER_PORT=1883
 MQTT_KEEPALIVE=60
 MQTT_USE_TLS=false
 PROCESSOR_CLIENT_ID=camera_event_processor
