docs(ports): Fix KMS port range and update deployment guide
ISSUE: External streaming failed - port configuration confusion

ROOT CAUSES:
1. KMS WebRTC port range (5000-5050) conflicted with dashboard (port 5000)
2. Deployment guide showed TURN relay range (49152-65535) as required
3. Actual requirement is KMS media ports (5001-5100) forwarded in router

FIXES:
1. Updated KMS WebRtcEndpoint.conf.ini: minPort=5001, maxPort=5100
2. Updated DEPLOYMENT_GUIDE.md port forwarding section:
   - Required: 5000 (dashboard), 8765 (WSS), 5001-5100 (KMS media)
   - Optional: 3478, 5349 (TURN - only for restrictive NATs)
3. Added clear notes about port conflicts and requirements

RESULT:
- External streaming works with just 100 ports forwarded (5001-5100)
- No dashboard/KMS port conflict
- TURN server optional (not required for most networks)
- Clear documentation for future deployments

--- a/livestreaming/config/kurento/WebRtcEndpoint.conf.ini
+++ b/livestreaming/config/kurento/WebRtcEndpoint.conf.ini
@@ -17,8 +17,10 @@ networkInterfaces=all
 iceCandidateGatheringTimeout=10
 
 # Port range for WebRTC
-minPort=5000
-maxPort=5050
+# Note: Port 5000 is used by dashboard, so KMS uses 5001-5100
+# These ports must be forwarded in router for external streaming
+minPort=5001
+maxPort=5100
 
 # TURN server (optional - uncomment if needed for restrictive NATs)
 # turnURL=username:password@turn.example.com:3478?transport=udp
