fix: Remove minPort/maxPort from BaseRtpEndpoint config
Kurento entrypoint sets these from KMS_MIN_PORT/KMS_MAX_PORT env vars
Mounting file with these values causes 'Device or resource busy' error
when entrypoint tries to sed the file

--- a/livestreaming/config/kurento/BaseRtpEndpoint.conf.ini
+++ b/livestreaming/config/kurento/BaseRtpEndpoint.conf.ini
@@ -3,10 +3,8 @@
 ;; Created: 2025-12-29
 ;; Purpose: Fix RTCP/REMB not flowing to camera (TODO.md issue #2)
 
-;; Port range for incoming RTP streams
-;; Must match KMS_MIN_PORT and KMS_MAX_PORT from environment
-minPort=5000
-maxPort=5050
+;; NOTE: minPort and maxPort are set via KMS_MIN_PORT/KMS_MAX_PORT environment variables
+;; DO NOT set them here or Kurento entrypoint will fail with "Device or resource busy"
 
 ;; Maximum Transmission Unit for RTP packets
 ;; Default is 1200 bytes (matches libwebrtc)
