fix(kurento): Add STUN/TURN config to BaseRtpEndpoint for RTCP routing
Added network interface and external IP configuration to help
RTCP packets route correctly back to camera. This supplements
the REMB configuration with proper NAT traversal settings.

- networkInterfaces=all
- externalIPv4=192.168.199.173
- stunServerAddress=stun.l.google.com
- stunServerPort=19302

--- a/livestreaming/config/kurento/BaseRtpEndpoint.conf.ini
+++ b/livestreaming/config/kurento/BaseRtpEndpoint.conf.ini
@@ -47,8 +47,17 @@ rembMinBitrate=500000
 ;gstDebug=3,rtcp*:5,rtp*:4
 
 ;; Network interface configuration
-;; Let Kurento auto-detect (uses networkInterfaces from WebRtcEndpoint)
-;; This ensures RTCP goes to correct interface
+;; Explicitly set to match WebRtcEndpoint configuration
+networkInterfaces=all
+
+;; External IP address for RTCP packet routing
+;; This helps ensure RTCP packets are sent to the correct IP
+externalIPv4=192.168.199.173
+
+;; STUN server configuration for NAT traversal and RTCP routing
+;; Using same STUN server as WebRtcEndpoint
+stunServerAddress=stun.l.google.com
+stunServerPort=19302
 
 ;; Quality of Service (QoS) DSCP marking (optional)
 ;; Uncomment to prioritize RTP/RTCP packets at network level
